syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.OrderService.proto";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc GetProductInfo (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int64 product_id = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  int32 quantity = 3;
  double price = 4;
  bool sale = 5;
}